fix: apply required spacing/styles to main page panner

--- a/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
+++ b/Childrens-Social-Care-CPD/styles/scss/overrides/_dfe-overrides.scss
@@ -220,7 +220,7 @@ CONTENT TITLE BANNER
 }
 
 .app-section-content {
-    padding-bottom: 35px;
+    padding-bottom: 40px;
 }
 
 p#content-banner-subtitle.govuk-body-l {
@@ -872,6 +872,7 @@ content: "";
 
 .govuk-breadcrumbs ul {
     padding-left: 0px;
+    margin-bottom: 15px;
 }
 
 /*
@@ -884,4 +885,15 @@ content: "";
 
 .beta-banner-home {
     border-bottom: 0;
+}
+
+/*
+* Page Banner
+*/
+h1#content-banner-title {
+    line-height: 1;
+}
+
+p#content-banner-subtitle {
+    line-height: 1;
 }
